# chessyAI-1.6

./: .dockerignore  .gitignore  AI_SECRETS.md  CHANGES_LOG.md  CHESSYCOM_PLAN.md  CHESSYCOM_QUICKSTART.md  CHESSY_1.3_COMPLETE_GUIDE.md  CHESSY_1.4_READY.md  CHESSY_1.5_QUICKSTART.md  CHESSY_1.6_CLOUD_QUICKSTART.md  CHESSY_1.6_CLOUD_SUMMARY.md  CHESSY_1.6_CLOUD_TRAINING.md  CHESSY_1.6_COMPLETE_OVERVIEW.md  CHESSY_1.6_DELIVERY_SUMMARY.md  CHESSY_1.6_DEPLOYMENT_CHECKLIST.md  CHESSY_1.6_FINAL_STATUS.md  CHESSY_1.6_IMPLEMENTATION_CHECKLIST.md  CHESSY_1.6_IMPLEMENTATION_GUIDE.md  CHESSY_1.6_INDEX.md  CHESSY_1.6_PLAN.md  CHESSY_1.6_QUICK_FIX_SUMMARY.md  CHESSY_1.6_SEARCH_IMPROVEMENTS.md  CHESSY_1.6_SUMMARY.md  CHESSY_1.6_VISUAL_SUMMARY.txt  CHOCKER_COMPLETE.md  CHOCKER_README.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_READY.md  Dockerfile  FINAL_DEPLOYMENT_SUMMARY.txt  FINAL_STATUS.md  FINAL_TESTING_CHECKLIST.md  GITHUB_FILES_TO_INCLUDE.md  HOW_TO_PLAY_CHESSY_1.4.md  HOW_TO_PLAY_CHOCKER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_CLOUD_TRAINING.md  KEEP_ALIVE_GUIDE.md  QUICK_BUILD_SETUP.bat  QUICK_DEPLOY.md  (+26 more)
chessy-1.6/: CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  build.bat  build.sh  build_ninja.bat  render.yaml  requirements.txt  setup_cloud_training.bat  setup_cloud_training.sh  train_cloud.py
chessy-1.6/src/: main.cpp
chessy-1.6/src/chess/: board.cpp  board.h  moves.cpp  moves.h  position.cpp  position.h  rules.cpp  rules.h
chessy-1.6/src/engine/: evaluator.cpp  evaluator.h  search.cpp  search.h  transposition.cpp  transposition.h
docs/: INDEX.md  (+8 more)
(+120 files in other folders)
